--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hello
+<p>My name is Liam Bee. I went to Warren Hills Regional Highschool in New Jersey. I like to play soccer and games(soccer and board)</p>
