--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-My name is Liam Bee.
+My name is Liam Bee. I went to Warren Hills Regional Highschool in New Jersey. I like to play soccer and games(soccer and board). I have 3 siblings and a pet dog.
+My favorite food are burgers
+<img src="https://www.eatingwell.com/thmb/aKA6WL4j01orJ6F7v9bF4PH6B7Y=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/air-fryer-cheeseburgers-9e0cf0071bcb4b8d9bc806cabfb61347.jpg" alt="Burger">
